# aider-mcp-server

./: .gitignore  .mcp.json  README.md  aider-guide.md  aider-test.py  hello.py  print-python-info.py  pyproject.toml
scripts/: client_create_show_system_info.py  client_mcp_test.py
src/aider_mcp_server/: __main__.py
src/aider_mcp_server/tests/atoms/tools/: test_aider_ai_code.py
